# coinmarketcap-web-scraper

./: README.md  pyproject.toml
app/: admin.py  models.py  scraping.py  serializers.py  tasks.py  views.py
app/migrations/: 0001_initial.py  0002_alter_currency_options_remove_currency_c_supply_and_more.py  0003_delete_currency.py  0004_initial.py
myproject/: celery.py  settings.py  urls.py
myproject-fe/: package-lock.json  package.json
myproject-fe/src/: App.css  App.js
