[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Jaspreet Singh <jaspreet159939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2 = "^2.9.5"
black = "^22.10.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.1"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
